feat: add style to progress bar

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
 * {
   font-family: Poppins, sans-serif;
 }
+
+progress::-webkit-progress-bar {
+  background-color: transparent;
+}
+progress::-webkit-progress-value {
+  background-color: #00aeff;
+}
